--- a/bb/zglobal/css/robo.css
+++ b/bb/zglobal/css/robo.css
@@ -178,3 +178,10 @@ right:0;
 	padding:4px 6px;
 	}
 }
+
+.inverted {
+  -webkit-filter: invert(100%);
+     -moz-filter: invert(100%); 
+       -o-filter: invert(100%);
+      -ms-filter: invert(100%);
+}
