Starting to work...

--- a/bb/zglobal/css/robo.css
+++ b/bb/zglobal/css/robo.css
@@ -181,7 +181,12 @@ right:0;
 
 .inverted {
   -webkit-filter: invert(100%);
-     -moz-filter: invert(100%); 
+     -moz-filter: invert(100%);
        -o-filter: invert(100%);
       -ms-filter: invert(100%);
+}
+
+.overlay {
+  fill: none;
+  pointer-events: all;
 }
