--- a/bb/zglobal/css/robo.css
+++ b/bb/zglobal/css/robo.css
@@ -1,49 +1,49 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 body,html {
-font-size:100%;
-margin:0;
-overflow:hidden;
-padding:0;
+    font-size:100%;
+    margin:0;
+    overflow:hidden;
+    padding:0;
 }
 
 body {
-background:#fff;
-color:#223222;
-font-family:Lato, Calibri, Arial, sans-serif;
+    background:#fff;
+    color:#223222;
+    font-family:Lato, Calibri, Arial, sans-serif;
 }
 
 a {
-color:#000;
-text-decoration:none;
+    color:#000;
+    text-decoration:none;
 }
 
-ul {
-list-style:none;
-margin:0;
-padding:0;
+ol {
+    list-style:none;
+    margin:0;
+    padding:0;
 }
 
-ul > li {
-display:inline-block;
-max-width:100%;
+ol > li {
+    display:inline-block;
+    max-width:100%;
 }
 
-ul a:link {
-color:#000!important;
-display:block;
-padding:2px;
-text-decoration:none;
-font-weight: bold;
+ol a:link {
+    color:#000;
+    display:block;
+    padding:2px;
+    text-decoration:none;
+    font-weight: bold;
 }
 
-ul a:visited {
-color:#000;
+ol a:visited {
+    color:#000;
 }
 
-ul a:hover, .selectedpart {
-background-color:#0047FF;
-color:#fff!important;
+ol a:hover, ol .selectedpart a {
+    background-color:#0047FF;
+    color:#fff;
 }
 
 path, rect, circle, ellipse, line, polyline, polygon {
@@ -54,7 +54,8 @@ path:hover, rect:hover, circle:hover, ellipse:hover, line:hover, polyline:hover,
     fill-opacity: 0.4;
     cursor: pointer;
 }
-.selectedpart {
+
+svg .selectedpart {
     stroke: #ffb800;
     stroke-width: 12;
     stroke-linejoin: round;
@@ -92,29 +93,33 @@ color: #fff !important;
 width:22px;
 }
 
-#textfilter {
-position:fixed;
-left:0;
-top:0;
-z-index:2;
-background:rgba(245, 245, 245, 0.6);
-box-shadow:0 0 3px 1px #111;
-padding:4px 6px;
-font-size: 10pt;
-font-weight: bold;
+.panel {
+
 }
 
-.searchlist {
-background:rgba(245, 245, 245, 0.72);
-top: 60px;
-box-shadow:0 0 3px 1px #111;
-max-height:700px;
-min-width: 215px;
-max-width:800px;
-padding:4px 6px;
-position:fixed;
-left:0;
-z-index:3;
+#textfilter {
+    position:fixed;
+    left:0;
+    top:0;
+    z-index:2;
+    background:rgba(245, 245, 245, 0.6);
+    box-shadow:0 0 3px 1px #111;
+    padding:4px 6px;
+    font-size: 10pt;
+    font-weight: bold;
+}
+
+.partlist {
+    background:rgba(245, 245, 245, 0.72);
+    top: 60px;
+    box-shadow:0 0 3px 1px #111;
+    max-height:700px;
+    min-width: 215px;
+    max-width:800px;
+    padding:4px 6px;
+    position:fixed;
+    left:0;
+    z-index:3;
 }
 
 #close {
