--- a/bb/zglobal/css/robo.css
+++ b/bb/zglobal/css/robo.css
@@ -147,39 +147,39 @@ ol.components {
 	color: #fff;
 }
 
-.Resistors span.name {
+.Resistors .name {
 	border-bottom: 3px solid #377eb8;
 }
 
-.Trimpots span.name {
+.Trimpots .name {
 	border-bottom: 3px solid #4daf4a;
 }
 
-.Ceramic span.name {
+.Ceramic .name {
 	border-bottom: 3px solid #a65628;
 }
 
-.Film span.name {
+.Film .name {
 	border-bottom: 3px solid #ffff33;
 }
 
-.Tantalum span.name {
+.Tantalum .name {
 	border-bottom: 3px solid #ff7f00;
 }
 
-.Electrolytic span.name {
+.Electrolytic .name {
 	border-bottom: 3px solid #984ea3;
 }
 
-.Diodes span.name {
+.Diodes .name {
 	border-bottom: 3px solid #e41a1c;
 }
 
-.Transistors span.name {
+.Transistors .name {
 	border-bottom: 3px solid #f781bf;
 }
 
-.ICs span.name {
+.ICs .name {
 	border-bottom: 3px solid #999999;
 }
 
