--- a/bb/robo.css
+++ b/bb/robo.css
@@ -286,14 +286,14 @@ border: 1px solid #F9761E;
 
 #componentlistpanel {
 left: 0;
-top: 1.8em; /* dnLjr8TaE1Q */
+top: 1.85em;
 padding-bottom: 2.2em;
 position: absolute;
 bottom: 0;
--webkit-transition: all 400ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
--moz-transition: all 400ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
--o-transition: all 400ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
-transition: all 400ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+-webkit-transition: all 250ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+-moz-transition: all 250ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+-o-transition: all 250ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+transition: all 250ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
 pointer-events:none;
 }
 
