--- a/bb/robo.css
+++ b/bb/robo.css
@@ -2,7 +2,7 @@ body,html {
 font-size: 100%;
 margin: 0;
 padding: 0;
-background: #fcfcfc;
+background: #f1f1f1;
 }
 
 body {
@@ -82,7 +82,7 @@ content: "> ";
 }
 
 #loading {
-background: #FFF;
+background: #fff;
 display: block;
 height: 100%;
 left: 0;
