--- a/bb/robo.css
+++ b/bb/robo.css
@@ -293,7 +293,7 @@ transition: all 250ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
 pointer-events:none;
 box-shadow: 0px 2px 2px 1px #444;
 -moz-box-shadow: 0px 2px 2px 1px #444;
-border: 1px black solid;
+border: 1px #333 solid;
 border-left: 0;
 border-bottom-width: 3px;
 }
