--- a/bb/robo.css
+++ b/bb/robo.css
@@ -155,8 +155,14 @@ width: 100%;
 background: #e1e1e1;
 line-height: 1.6em;
 position: fixed;
--moz-box-shadow: 0 0 3px 1px #777;
-box-shadow: 0 0 3px 1px #777;
+-moz-box-shadow: 0 0 1px 0 #444;
+box-shadow: 0 0 1px 0 #444;
+border-bottom: 1px #333 solid;
+background-image: -webkit-gradient(linear,0 0,0 100%,from(#fff),to(#e9e9e9));
+background-image: -webkit-linear-gradient(top,#fff,#e9e9e9);
+background-image: -o-linear-gradient(top,#fff,#e9e9e9);
+background-image: linear-gradient(to bottom,#fff,#e9e9e9);
+background-image: -moz-linear-gradient(top,#fff,#e9e9e9);
 }
 
 ol {
