--- a/bb/robo.css
+++ b/bb/robo.css
@@ -300,8 +300,8 @@ pointer-events:none;
 box-shadow: 0px 2px 2px 1px #444;
 -moz-box-shadow: 0px 2px 2px 1px #444;
 border: 1px #333 solid;
-border-left: 0;
-border-bottom-width: 3px;
+border-left-width: 0;
+border-bottom-width: 0;
 }
 
 #componentlist {
@@ -318,7 +318,7 @@ padding: 4px 6px 2px 8px;
 background: #c0c0c0;
 pointer-events:all;
 margin: 0px;
-border-bottom: 1px black solid;
+border-bottom: 1px #777 solid;
 }
 
 #componentlist .quantity {
