--- a/bb/robo.css
+++ b/bb/robo.css
@@ -73,8 +73,7 @@ z-index: 999;
 }
 
 .collapsed {
-background: #A2A2A2;
-color: #2A2A2A;
+background: #BEBEBE;
 }
 
 .collapsed::before {
@@ -195,6 +194,7 @@ color: #fff;
 ol .selectedcomponent a {
 background-color: #EB0000;
 color: #fff;
+text-shadow: 0px 1px black;
 }
 
 ol.components {
@@ -289,7 +289,7 @@ border: 1px solid #F9761E;
 #componentlistpanel {
 left: 0;
 top: 1.8em;
-padding-bottom: 2.2em;
+padding-bottom: 2.3em;
 position: absolute;
 bottom: 0;
 -webkit-transition: all 250ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
@@ -297,11 +297,6 @@ bottom: 0;
 -o-transition: all 250ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
 transition: all 250ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
 pointer-events:none;
-box-shadow: 0px 2px 2px 1px #444;
--moz-box-shadow: 0px 2px 2px 1px #444;
-border: 1px #333 solid;
-border-left-width: 0;
-border-bottom-width: 0;
 }
 
 #componentlist {
@@ -311,6 +306,11 @@ overflow-x: hidden;
 position: relative;
 background: #f0f0f0;
 pointer-events:all;
+border: 1px #333 solid;
+border-left-width: 0;
+border-top-width: 0;
+box-shadow: 0px 1px 1px 0px #444;
+-moz-box-shadow: 0px 1px 1px 0px #444;
 }
 
 #find {
@@ -319,6 +319,10 @@ background: #c0c0c0;
 pointer-events:all;
 margin: 0px;
 border-bottom: 1px #777 solid;
+border-right: 1px #333 solid;
+border-top: 1px #333 solid;
+box-shadow: 0px 1px 1px 0px #444;
+-moz-box-shadow: 0px 1px 1px 0px #444;
 }
 
 #componentlist .quantity {
@@ -473,9 +477,9 @@ display: none !important;
   }
 
   #componentlistpanel {
-  top: 2.25em;
+  top: 3em;
   width: 100%;
-  padding-bottom: 2.25em;
+  padding-bottom: 2.3em;
   }
 
   #top {
@@ -486,6 +490,7 @@ display: none !important;
 
   #togglelist {
   pointer-events: none;
+  line-height: 1.6;
   }
 
   #label {
@@ -493,5 +498,6 @@ display: none !important;
   font-style: normal;
   top: 0;
   padding-bottom: 5px;
+  line-height: 3;
   }
 }
